# workbench-preprocessor

./: .gitignore  Cargo.toml  LIBRARY.md  LICENSE  README.md  RELEASE_CHECKLIST.md  build.ps1  build.sh
.github/workflows/: ci.yml  draft-release.yml  release.yml
src/: cli.rs  csv_modifier.rs  google_sheets.rs  item_csv_generator.rs  lib.rs  main.rs  pipeline.rs
src/modifiers/: README.md  access_identifier.rs  copy_column.rs  field_description.rs  field_model.rs  file_extension.rs  language.rs  mod.rs  parent_id.rs
tests/: google_sheets_tests.rs  integration_tests.rs  item_csv_generator_tests.rs
