[package]
name = "organise"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "organise"
path = "src/main.rs"

[dependencies]
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
reqwest = { version = "0.12", features = ["blocking"] }
url = "2.5"
clap = { version = "4.5", features = ["derive"] }
tempfile = "3.0"
log = "0.4"
env_logger = "0.11"
