[package]
name = "workbench-preprocessor"
version = "0.1.0"
edition = "2021"

[lib]
name = "organise"
path = "src/lib.rs"

[[bin]]
name = "organise"
path = "src/main.rs"

[dependencies]
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
reqwest = { version = "0.12", features = ["blocking"] }
url = "2.5"
clap = { version = "4.5", default-features = false, features = [
	"std",
	"derive",
	"help",
	"usage",
	"error-context",
] }
log = "0.4"
env_logger = "0.11"
encoding_rs = "0.8"
tempfile = "3.0"
toml = "0.8"

[profile.release]
opt-level = 3
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Better optimization (slower compile, smaller binary)
strip = true      # Automatically strip symbols
panic = "abort"   # Reduce panic handling overhead
